<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.usermenu.UserMenuFragment">

    <TextView
        android:id="@+id/textView"
        style="@style/titleStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_weight="3"
        android:gravity="center|top"
        android:text="@string/my_drinks" />

    <Button
        android:id="@+id/button_add_cocktails"
        style="@style/buttonStyle"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:minWidth="210dp"
        android:text="@string/add_a_recipe" />

    <Button
        android:id="@+id/button_my_recipes"
        style="@style/buttonStyle"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:minWidth="210dp"
        android:text="@string/my_recipes" />

    <Button
        android:id="@+id/button_my_favorites"
        style="@style/buttonStyle"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="300dp"
        android:layout_weight="1"
        android:minWidth="210dp"
        android:text="@string/my_favorites" />

</LinearLayout>