<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.usermenu.MyRecipesDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageview_details"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginRight="16dp"
                android:contentDescription="@string/image_description"
                android:maxHeight="200dp"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textview_details_title"
                    style="@style/titleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/cocktail_name"
                    tools:ignore="TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/imageview_delete"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/delete_recipe"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    app:srcCompat="@drawable/wastebasket"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <ImageButton
                    android:id="@+id/imageview_edit"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:background="#00FFFFFF"
                    android:contentDescription="@string/edit_recipe"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    app:srcCompat="@drawable/edit"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="300dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textview_details_ingredients_title"
                style="@style/simpleTextTitleStyle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:paddingBottom="0dp"
                android:text="@string/ingredients" />

            <TextView
                android:id="@+id/textview_details_ingredients"
                style="@style/simpleTextStyle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="0dp"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textview_details_instructions_title"
                style="@style/simpleTextTitleStyle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:paddingBottom="0dp"
                android:text="@string/instructions"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textview_details_instructions"
                style="@style/simpleTextStyle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="64dp"
                android:paddingTop="0dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>